MP-675 :boom: BREAKING!: 검색 로직 개발
- Feat: 애플리케이션 프로퍼티에 connection-init-sql 추가