@@ -8,12 +8,14 @@ import kr.modusplant.domains.post.domain.exception.PostAccessDeniedException;
 import kr.modusplant.domains.post.domain.exception.PostNotFoundException;
 import kr.modusplant.domains.post.domain.exception.enums.PostErrorCode;
 import kr.modusplant.domains.post.domain.vo.*;
+import kr.modusplant.domains.post.usecase.enums.SearchSort;
 import kr.modusplant.domains.post.usecase.port.mapper.PostMapper;
 import kr.modusplant.domains.post.usecase.port.processor.MultipartDataProcessorPort;
 import kr.modusplant.domains.post.usecase.port.repository.*;
 import kr.modusplant.domains.post.usecase.record.ContentProcessRecord;
 import kr.modusplant.domains.post.usecase.record.PostDetailReadModel;
 import kr.modusplant.domains.post.usecase.record.PostSummaryReadModel;
+import kr.modusplant.domains.post.usecase.record.PostSummaryWithSearchInfoReadModel;
 import kr.modusplant.domains.post.usecase.request.PostCategoryRequest;
 import kr.modusplant.domains.post.usecase.request.PostInsertRequest;
 import kr.modusplant.domains.post.usecase.request.PostSearchRequest;
@@ -28,6 +30,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
 
@@ -50,7 +53,7 @@ public class PostController {
     @Value("${redis.ttl.view_count}")
     private long ttlMinutes;
 
-    public CursorPageResponse<PostSummaryResponse> getAll(PostCategoryRequest postCategoryRequest, UUID currentMemberUuid, String lastUlid, int size) {
+    public CursorLatestSortedPageResponse<PostSummaryResponse> getAll(PostCategoryRequest postCategoryRequest, UUID currentMemberUuid, String lastUlid, int size) {
         List<PostSummaryReadModel> readModels = postQueryRepository.findByCategoryWithCursor(
                 postCategoryRequest.primaryCategoryId(), postCategoryRequest.secondaryCategoryIds(), currentMemberUuid, lastUlid, size
         );
@@ -58,20 +61,49 @@ public class PostController {
         List<PostSummaryResponse> responses = readModels.stream()
                 .limit(size)
                 .map(readModel -> postMapper.toPostSummaryResponse(readModel,getJsonNodeContentPreview(readModel.content(),readModel.thumbnailPath()))).toList();
-        String nextUlid = hasNext && !responses.isEmpty() ? responses.get(responses.size() - 1).ulid() : null;
-        return CursorPageResponse.of(responses, nextUlid, hasNext);
+        String nextUlid = hasNext && !responses.isEmpty() ? responses.getLast().ulid() : null;
+        return CursorLatestSortedPageResponse.of(responses, nextUlid, hasNext);
     }
 
     @Transactional
-    public CursorPageResponse<PostSummaryResponse> getByKeyword(PostSearchRequest postSearchRequest, UUID currentMemberUuid, String lastUlid, int size) {
-        List<PostSummaryReadModel> readModels = postQueryRepository.findByKeywordWithCursor(postSearchRequest.option(), postSearchRequest.keyword(), postSearchRequest.sort(),postSearchRequest.category().primaryCategoryId(), postSearchRequest.category().secondaryCategoryIds(), currentMemberUuid, lastUlid, size);
+    public CursorRelevanceSortedPageResponse<PostSummaryWithSearchInfoResponse> getByKeyword(
+            PostSearchRequest postSearchRequest, UUID currentMemberUuid,
+            String lastUlid, Integer lastImportance, Double lastWordSimilarity, LocalDateTime lastPublishedAt,
+            int size) {
+
+        List<PostSummaryWithSearchInfoReadModel> readModels;
+        if (postSearchRequest.sort().equals(SearchSort.LATEST)) {
+            readModels = postQueryRepository.searchByKeywordWithLatest(
+                    postSearchRequest.option(), postSearchRequest.keyword(),
+                    postSearchRequest.category().primaryCategoryId(),
+                    postSearchRequest.category().secondaryCategoryIds(),
+                    currentMemberUuid, lastUlid, lastPublishedAt, size);
+        } else {
+            readModels = postQueryRepository.searchByKeywordWithRelevance(
+                    postSearchRequest.option(), postSearchRequest.keyword(),
+                    postSearchRequest.category().primaryCategoryId(),
+                    postSearchRequest.category().secondaryCategoryIds(),
+                    currentMemberUuid, lastUlid, lastImportance, lastWordSimilarity, lastPublishedAt, size);
+        }
         boolean hasNext = readModels.size() > size;
-        List<PostSummaryResponse> responses = readModels.stream()
-                .limit(size)
-                .map(readModel -> postMapper.toPostSummaryResponse(readModel,getJsonNodeContentPreview(readModel.content(),readModel.thumbnailPath()))).toList();
-        String nextUlid = hasNext && !responses.isEmpty() ? responses.get(responses.size() - 1).ulid() : null;
+        List<PostSummaryWithSearchInfoResponse> responses =
+                readModels.stream()
+                        .limit(size)
+                        .map(readModel ->
+                                postMapper.toPostSummaryWithSearchInfoResponse(
+                                        readModel, getJsonNodeContentPreview(readModel.content(), readModel.thumbnailPath())))
+                        .toList();
         postSearchHistoryRepository.saveSearchKeyword(currentMemberUuid, postSearchRequest.keyword());
-        return CursorPageResponse.of(responses, nextUlid, hasNext);
+        PostSummaryWithSearchInfoResponse response = hasNext && !responses.isEmpty() ? responses.getLast() : null;
+        if (response != null) {
+            return CursorRelevanceSortedPageResponse.of(
+                    responses, response.ulid(),
+                    response.importance(), response.maxWordSimilarity(),
+                    response.publishedAt(), true);
+        } else {
+            return CursorRelevanceSortedPageResponse.of(
+                    responses, null, null, null, null, hasNext);
+        }
     }
 
     public PostDetailResponse getByUlid(String ulid, UUID currentMemberUuid, UUID guestId) {
@@ -87,18 +119,17 @@ public class PostController {
                             getJsonNodeContent(postDetail.content()),
                             readViewCount(ulid)
                     );
-                }).orElseThrow(() -> new PostNotFoundException());
+                }).orElseThrow(PostNotFoundException::new);
     }
 
     public PostDetailDataResponse getDataByUlid(String ulid, UUID currentMemberUuid) {
         return postQueryRepository.findPostDetailDataByPostId(PostId.create(ulid))
-                .filter(postDetailData -> postDetailData.isPublished() ||
-                        (!postDetailData.isPublished() && postDetailData.authorUuid().equals(currentMemberUuid)))
+                .filter(postDetailData -> postDetailData.isPublished() || postDetailData.authorUuid().equals(currentMemberUuid))
                 .map(postDetailData -> postMapper.toPostDetailDataResponse(
                         postDetailData,
                         getJsonNodeContent(postDetailData.content()),
                         multipartDataProcessorPort.extractOriginalFilenameFromFileKey(postDetailData.thumbnailPath())))
-                .orElseThrow(() -> new PostNotFoundException());
+                .orElseThrow(PostNotFoundException::new);
     }
 
     @Transactional
@@ -162,7 +193,7 @@ public class PostController {
 
     @Transactional
     public void deletePost(String ulid, UUID currentMemberUuid) {
-        Post post = postRepository.getPostByUlid(PostId.create(ulid)).orElseThrow(() -> new PostNotFoundException());
+        Post post = postRepository.getPostByUlid(PostId.create(ulid)).orElseThrow(PostNotFoundException::new);
         if (!post.getAuthorId().equals(AuthorId.fromUuid(currentMemberUuid))) {
             throw new PostAccessDeniedException();
         }
